--- a/app/src/main/res/layout/vk_group.xml
+++ b/app/src/main/res/layout/vk_group.xml
@@ -2,7 +2,7 @@
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
-              android:layout_height="match_parent"
+              android:layout_height="fill_parent"
               android:orientation="vertical">
 
     <LinearLayout
@@ -17,14 +17,15 @@
             android:layout_marginRight="50dp"/>
 
         <TextView
+            android:id="@+id/vk_group_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginRight="50dp"
-            android:text="sssd"/>
+            android:layout_marginRight="50dp"/>
     </LinearLayout>
 
     <ListView
+        android:id="@+id/vk_group_list"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content">
 
