--- a/app/src/main/res/layout/vk_topic.xml
+++ b/app/src/main/res/layout/vk_topic.xml
@@ -2,18 +2,26 @@
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
-              android:layout_height="wrap_content"
-              android:orientation="horizontal">
+              android:layout_height="fill_parent"
+              android:orientation="horizontal"
+              android:paddingLeft="@dimen/activity_horizontal_margin">
 
     <ImageView
         android:id="@+id/vk_topic_author_photo"
-        android:layout_width="100dp"
-        android:layout_height="wrap_content"/>
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="4"
+        android:adjustViewBounds="true"
+        android:scaleType="fitXY"
+        />
 
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_weight="1"
+        android:orientation="vertical"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin">
 
         <TextView
             android:id="@+id/vk_topic_author_name"
@@ -24,7 +32,7 @@
         <TextView
             android:id="@+id/vk_topic_text"
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="fill_parent"/>
 
         <RelativeLayout
             android:layout_width="fill_parent"
