--- a/app/src/main/res/layout/vk_comment.xml
+++ b/app/src/main/res/layout/vk_comment.xml
@@ -5,11 +5,11 @@
               android:layout_height="match_parent"
               android:orientation="horizontal">
 
-    <ImageView
-        android:id="@+id/vk_reply_author_photo"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="4"/>
+    <!--<ImageView-->
+    <!--android:id="@+id/vk_comment_author_photo"-->
+    <!--android:layout_width="fill_parent"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:layout_weight="4"/>-->
 
     <LinearLayout
         android:layout_width="fill_parent"
@@ -20,18 +20,18 @@
         android:paddingRight="@dimen/activity_horizontal_margin">
 
         <TextView
-            android:id="@+id/vk_reply_author_name"
+            android:id="@+id/vk_comment_author_name"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:textStyle="bold"/>
 
         <TextView
-            android:id="@+id/vk_reply_text"
+            android:id="@+id/vk_comment_text"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"/>
 
         <TextView
-            android:id="@+id/vk_reply_date"
+            android:id="@+id/vk_comment_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="right"
