--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -1,32 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="wrap_content"
-                android:layout_height="fill_parent"
-                android:paddingLeft="10dp"
-                android:paddingRight="10dp"
-                android:paddingTop="20dp"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:orientation="vertical"
+              android:paddingLeft="10dp"
+              android:paddingRight="10dp"
+              android:paddingTop="20dp"
     >
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:layout_centerHorizontal="true"
         android:background="#882200"
+        android:orientation="vertical"
         >
-
-        <TextView
-            android:id="@+id/item_text_id"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/item_image_id"
-            android:layout_centerHorizontal="true"
-            android:gravity="center"
-            android:textColor="#FFFFFF"
-            android:paddingLeft="2dp"
-            android:paddingRight="2dp"
-            android:maxLines="3"
-            ></TextView>
 
         <ImageView
             android:id="@+id/item_image_id"
@@ -35,7 +24,22 @@
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
             android:src="@drawable/ic_launcher"></ImageView>
-    </RelativeLayout>
+
+        <TextView
+            android:id="@+id/item_text_id"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/item_image_id"
+            android:layout_centerHorizontal="true"
+            android:layout_gravity="center_horizontal"
+            android:gravity="center_horizontal"
+            android:maxLines="2"
+            android:paddingLeft="2dp"
+            android:paddingRight="2dp"
+            android:textColor="#FFFFFF"
+            ></TextView>
+
+    </LinearLayout>
 
 
-</RelativeLayout>
+</LinearLayout>
