--- a/app/src/main/res/layout/vk_topic.xml
+++ b/app/src/main/res/layout/vk_topic.xml
@@ -10,6 +10,7 @@
         android:id="@+id/vk_topic_author_photo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
         android:layout_weight="4"
         android:adjustViewBounds="true"
         android:scaleType="fitXY"
