--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -4,6 +4,8 @@
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:orientation="vertical"
+              android:paddingLeft="10dp"
+              android:paddingRight="10dp"
               android:paddingTop="20dp"
     >
 
