--- a/app/src/main/res/layout/vk_comment.xml
+++ b/app/src/main/res/layout/vk_comment.xml
@@ -2,18 +2,24 @@
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
-              android:layout_height="match_parent"
+              android:layout_height="fill_parent"
               android:orientation="horizontal">
 
-    <!--<ImageView-->
-    <!--android:id="@+id/vk_comment_author_photo"-->
-    <!--android:layout_width="fill_parent"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:layout_weight="4"/>-->
+    <ImageView
+        android:id="@+id/vk_comment_author_photo"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/activity_horizontal_margin"
+        android:layout_weight="4"
+        android:adjustViewBounds="true"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        android:scaleType="fitXY"
+        />
 
     <LinearLayout
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
+        android:layout_height="wrap_content"
         android:layout_weight="1"
         android:orientation="vertical"
         android:paddingLeft="@dimen/activity_horizontal_margin"
