--- a/app/src/main/res/layout/vk_topic.xml
+++ b/app/src/main/res/layout/vk_topic.xml
@@ -37,19 +37,20 @@
 
         <RelativeLayout
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom">
 
             <TextView
                 android:id="@+id/vk_topic_comments"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"></TextView>
+                android:layout_alignParentLeft="true"/>
 
             <TextView
                 android:id="@+id/vk_topic_date"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"></TextView>
+                android:layout_alignParentRight="true"/>
         </RelativeLayout>
     </LinearLayout>
 
