--- a/app/src/main/res/layout/vk_wall_post.xml
+++ b/app/src/main/res/layout/vk_wall_post.xml
@@ -2,13 +2,11 @@
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
-              android:layout_height="fill_parent"
-              android:orientation="horizontal"
-              android:paddingLeft="@dimen/activity_horizontal_margin"
-              android:paddingRight="@dimen/activity_horizontal_margin">
+              android:layout_height="match_parent"
+              android:orientation="vertical">
 
     <ImageView
-        android:id="@+id/vk_topic_author_photo"
+        android:id="@+id/vk_post_author_photo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
@@ -26,7 +24,7 @@
         android:paddingRight="@dimen/activity_horizontal_margin">
 
         <TextView
-            android:id="@+id/vk_topic_author_name"
+            android:id="@+id/vk_post_author_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textStyle="bold"/>
@@ -36,7 +34,7 @@
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"/>
 
-        <include layout="@layout/vk_item_footer"></include>
+        <include layout="@layout/vk_item_footer"/>
     </LinearLayout>
 
 </LinearLayout>
