can watch vk boards

--- a/app/src/main/res/layout/vk_topic.xml
+++ b/app/src/main/res/layout/vk_topic.xml
@@ -36,7 +36,8 @@
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"/>
 
-        <include layout="@layout/vk_item_footer"></include>
+        <include
+            layout="@layout/vk_item_footer"></include>
     </LinearLayout>
 
 </LinearLayout>
