--- a/app/src/main/res/layout/vk_wall_post.xml
+++ b/app/src/main/res/layout/vk_wall_post.xml
@@ -3,13 +3,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
-              android:orientation="vertical">
+              android:orientation="horizontal"
+              android:paddingLeft="@dimen/activity_horizontal_margin"
+              android:paddingTop="@dimen/activity_vertical_margin">
 
     <ImageView
         android:id="@+id/vk_post_author_photo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
         android:layout_weight="4"
         android:adjustViewBounds="true"
         android:scaleType="fitXY"
@@ -24,15 +25,24 @@
         android:paddingRight="@dimen/activity_horizontal_margin">
 
         <TextView
-            android:id="@+id/vk_post_author_name"
+            android:id="@+id/vk_wall_post_author_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textStyle="bold"/>
 
         <TextView
-            android:id="@+id/vk_topic_text"
+            android:id="@+id/vk_wall_post_text"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"/>
+
+        <ImageView
+            android:id="@+id/vk_wall_attached_picture"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:adjustViewBounds="true"
+            android:paddingBottom="@dimen/activity_vertical_margin"
+            android:paddingTop="@dimen/activity_vertical_margin"
+            android:scaleType="fitXY"/>
 
         <include layout="@layout/vk_item_footer"/>
     </LinearLayout>
