--- a/app/src/main/res/layout/vk_comment.xml
+++ b/app/src/main/res/layout/vk_comment.xml
@@ -3,12 +3,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
               android:layout_height="fill_parent"
-              android:orientation="horizontal">
+              android:orientation="horizontal"
+              android:weightSum="5">
 
     <ImageView
         android:id="@+id/vk_comment_author_photo"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_marginLeft="@dimen/activity_horizontal_margin"
         android:layout_weight="4"
         android:adjustViewBounds="true"
