--- a/app/src/main/res/layout/vk_wall_post.xml
+++ b/app/src/main/res/layout/vk_wall_post.xml
@@ -5,12 +5,13 @@
               android:layout_height="match_parent"
               android:orientation="horizontal"
               android:paddingLeft="@dimen/activity_horizontal_margin"
-              android:paddingTop="@dimen/activity_vertical_margin">
+              android:paddingTop="@dimen/activity_vertical_margin"
+              android:weightSum="5">
 
     <ImageView
         android:id="@+id/vk_post_author_photo"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_weight="4"
         android:adjustViewBounds="true"
         android:scaleType="fitXY"
