--- a/app/src/main/res/layout/vk_comment.xml
+++ b/app/src/main/res/layout/vk_comment.xml
@@ -4,17 +4,18 @@
               android:layout_width="match_parent"
               android:layout_height="fill_parent"
               android:orientation="horizontal"
+              android:paddingBottom="@dimen/activity_vertical_margin"
+              android:paddingLeft="@dimen/activity_horizontal_margin"
+              android:paddingRight="@dimen/activity_horizontal_margin"
+              android:paddingTop="@dimen/activity_vertical_margin"
               android:weightSum="5">
 
     <ImageView
         android:id="@+id/vk_comment_author_photo"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginLeft="@dimen/activity_horizontal_margin"
         android:layout_weight="4"
         android:adjustViewBounds="true"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
         android:scaleType="fitXY"
         />
 
@@ -23,10 +24,9 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:orientation="vertical"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin">
+        android:paddingLeft="@dimen/activity_horizontal_margin">
 
-        <TextView
+    <TextView
             android:id="@+id/vk_comment_author_name"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
