--- a/app/src/main/res/layout/vk_topic.xml
+++ b/app/src/main/res/layout/vk_topic.xml
@@ -4,8 +4,10 @@
               android:layout_width="match_parent"
               android:layout_height="fill_parent"
               android:orientation="horizontal"
+              android:paddingBottom="@dimen/activity_vertical_margin"
               android:paddingLeft="@dimen/activity_horizontal_margin"
               android:paddingRight="@dimen/activity_horizontal_margin"
+              android:paddingTop="@dimen/activity_vertical_margin"
               android:weightSum="5">
 
 
@@ -23,10 +25,9 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:orientation="vertical"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin">
+        android:paddingLeft="@dimen/activity_horizontal_margin">
 
-        <TextView
+    <TextView
             android:id="@+id/vk_topic_author_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
