--- a/app/src/main/res/layout/social_network_item_footer.xml
+++ b/app/src/main/res/layout/social_network_item_footer.xml
@@ -5,7 +5,7 @@
     android:layout_height="fill_parent">
 
     <TextView
-        android:id="@+id/vk_comments_quantity"
+        android:id="@+id/comments_quantity"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"/>
