--- a/app/src/main/res/layout/vk_wall_post.xml
+++ b/app/src/main/res/layout/vk_wall_post.xml
@@ -45,7 +45,7 @@
             android:paddingTop="@dimen/activity_vertical_margin"
             android:scaleType="fitXY"/>
 
-        <include layout="@layout/vk_item_footer"/>
+        <include layout="@layout/social_network_item_footer"/>
     </LinearLayout>
 
 </LinearLayout>
