--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -10,11 +10,11 @@
               android:paddingTop="20dp">
 
     <LinearLayout
+        android:id="@+id/item_content"
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:background="#882200"
         android:orientation="vertical"
         >
 
