--- a/app/src/main/res/layout/social_network_comment.xml
+++ b/app/src/main/res/layout/social_network_comment.xml
@@ -11,7 +11,7 @@
               android:weightSum="5">
 
     <ImageView
-        android:id="@+id/vk_comment_author_photo"
+        android:id="@+id/comment_author_photo"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="4"
@@ -27,22 +27,22 @@
         android:paddingLeft="@dimen/activity_horizontal_margin">
 
         <TextView
-            android:id="@+id/vk_comment_author_name"
+            android:id="@+id/comment_author_name"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:textStyle="bold"/>
 
         <TextView
-            android:id="@+id/vk_comment_text"
+            android:id="@+id/comment_text"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"/>
 
         <TextView
-            android:id="@+id/vk_comment_date"
+            android:id="@+id/comment_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="right"
             />
     </LinearLayout>
-
+    <!--TODO delete it?-->
 </LinearLayout>
