--- a/app/src/main/res/layout/social_network_topic.xml
+++ b/app/src/main/res/layout/social_network_topic.xml
@@ -17,8 +17,10 @@
         />
 
     <LinearLayout
+        android:id="@+id/topic_container"
         android:layout_width="match_parent"
-        android:layout_height="fill_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
         android:orientation="horizontal"
         android:paddingTop="@dimen/activity_vertical_margin"
         android:weightSum="5">
@@ -27,10 +29,9 @@
             android:id="@+id/topic_author_photo"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_gravity="center_vertical"
             android:layout_weight="4"
             android:adjustViewBounds="true"
-            android:scaleType="fitCenter"/>
+            android:scaleType="fitXY"/>
 
         <LinearLayout
             android:layout_width="fill_parent"
