--- a/app/src/main/res/layout/html_layout.xml
+++ b/app/src/main/res/layout/html_layout.xml
@@ -9,6 +9,7 @@
         android:id="@+id/html_content"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:autoLink="all"
         android:paddingBottom="@dimen/activity_vertical_margin"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
