--- a/app/src/main/res/layout/social_network_topic.xml
+++ b/app/src/main/res/layout/social_network_topic.xml
@@ -50,7 +50,8 @@
                 android:id="@+id/topic_text"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:ellipsize="end"/>
+                android:ellipsize="end"
+                android:maxLines="3"/>
 
             <include
                 layout="@layout/social_network_item_footer"></include>
