--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="linkedin_item">#0189b9</color>
     <color name="vk_item">#7091ba</color>
     <color name="facebook_item">#3b5a93</color>
+    <color name="action_bar_color">#2c5491</color>
 </resources>
